--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'snapshot', version: '20190719-1.14.3'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
+
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
@@ -85,6 +85,15 @@ minecraft {
     }
 }
 
+repositories {
+    jcenter()
+}
+
+configurations {
+    embed
+    compile.extendsFrom(embed)
+}
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
@@ -109,6 +118,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+    embed 'org.jboss.weld.se:weld-se:2.4.8.Final'
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -123,6 +133,9 @@ jar {
             "Implementation-Vendor" :"examplemodsareus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
+    }
+    from configurations.embed.collect {
+        it.isDirectory() ? it : zipTree(it)
     }
 }
 
